kubernetes/oke/apps/n8n/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.mafyuh.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: automation
spec:
  hostnames: ["${N8N_HOST}"]
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: n8n-main
          port: 5678
